--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
   body{
     font-family: 'Raleway', sans-serif;
-    font-size: 14.5px;
+    font-size: 16px;
     color: black;
     line-height: 1.4;
     }
@@ -37,7 +37,38 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     margin: 0 auto;
     margin-top: 30px;
     }
- 
+	.button {
+    color: black;
+    background-color: white;
+    border: solid 1px #46b8da;
+    display: inline-block;
+    padding: 10px 20px;
+    margin-bottom: 0;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border-radius: 4px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+	}
+	.button a{
+		color: white!important;
+	}
+	.center{
+		text-align: center!important;
+	}
      #outer-padding{
      padding:20px;
      padding-top:120px;
@@ -123,7 +154,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 * { margin: 0; padding: 0; }
 h1,h2,h3,h4,h5,h6{
-    font-family: 'Montserrat', serif;
+   font-family: 'Playfair Display', serif;
     padding-bottom: 10px;
 }
 h1{
@@ -154,17 +185,10 @@ h1{
 }
 
 #menu-item-302{
-        font-family: 'Playfair Display';
-        max-width: 200px;
-        text-align: left;
-        padding:0 0 5px 0;
-        display: inline-block;
-    float:left;
-    transform:translateX(-30px);
+    display:none;
     }
  .menu{
      width:100%; 
-     background-color: white;
      display: block ;
      margin-top:30px;
      position: relative;
@@ -503,19 +527,18 @@ h1{
 
  /*            ---- PAGES ----        */
  .page{
-     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 17px;
     color: black;
     line-height: 1.5;
     background-color: white;
-    font-weight: 400;
 }
     .entry-title{
         font-family: 'Playfair Display';
         text-align: center;
     }
     .page h2{
-        font-size: 180%;
+        font-size: 220%;
     }
     .page h3{
         font-size: 150%;
@@ -540,6 +563,11 @@ h1{
         -webkit-transform: translateY(-8px);
 transform: translateY(-8px);
     }
+	#logo{
+		display: block;
+		width: 100%;
+    	height: 100%;
+	}
     .page a.logo:hover{
         -webkit-transform: translateY(0px);
 transform: translateY(0px);
@@ -561,9 +589,14 @@ transform: translateY(0px);
         padding: 20px 0;
         width:100%;
     }
-    .entry-content-page p{
+    .entry-content-page{
         padding-top:20px;
+		margin:0 auto;
+		width:75%;
     }
+	.entry-content-page p{
+		padding-top:20px;
+	}
     
 /*      Past Festival Films Page    */
     .past-fest-post{
@@ -642,20 +675,20 @@ transform: translateY(0px);
     
     /*          Festival page       */
     .page-template-festival-page h2{
-        width:60%;
-    }
-    .page-template-festival-page h3  {
-        width:90%;
+        width:100%;
+		font-size:230%;
     }
     
     /*      Series Page     */
-    .page-template-series-page p, h1, h2, h3, h4, h5{
-        padding:0px 20px;
-    }
+	#no-future-films{
+		background-color:yellow;
+		text-align: center;
+		padding:5px;
+	}
     .address-link{
         line-height: 1;
         text-align: left;
-        
+    
     }
     p.short-details{
         text-transform: none;
@@ -1431,6 +1464,7 @@ padding-bottom: 30px;
     font-size: 150%;
 }
     .page-template-festival-page h3{
+		font-family: 'Playfair Display';
         font-size: 120%;
     }
     
