--- a/style.css
+++ b/style.css
@@ -205,13 +205,6 @@ table {
     #header h1 {
         display: none;
     }
-    #menu-item-302 {
-        font-family: 'Playfair Display';
-        max-width: 150px;
-        text-align: left;
-        padding: 0;
-        display: inline-block;
-    }
     #container {
         max-width: 1200px;
         margin: 0 auto;
@@ -340,7 +333,10 @@ table {
         transform: perspective(150px) translate3d(-35px, -35px, 0px);
     }
     #menu-item-302 {
-        display: none;
+      float:left;
+        padding-left:20px;
+        text-align: left;
+        display: inline-block;
     }
     .menu {
         width: 100%;
@@ -429,10 +425,9 @@ table {
         position: absolute;
         right: 10px;
         top: 10px;
-        filter: invert(100%);
     }
     #footer a {
-        color: white;
+        color: black;
         font-weight: 500;
     }
     #footer p {
@@ -751,8 +746,9 @@ table {
         width: 33%;
         margin: 0;
         padding: 0;
-        height: auto;
-        float: left;
+        height: 300px;
+        display:inline-block;
+        list-style: none;
     }
     .past-fest-post p {
         width: 100%;
@@ -761,7 +757,6 @@ table {
     .past-series-post img {
         transform: none!important;
         width: 100% !important;
-        max-width: 550px;
         height: auto;
     }
     .past-fest-post .movieName,
@@ -801,6 +796,52 @@ table {
     .category-2017-series {
         min-height: 50vh;
     }
+    
+    .alm-load-more-btn.done{
+   display: none;
+}
+    .alm-load-more-btn {
+    display: block;
+    padding: 10px 40px;
+    text-transform: uppercase;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-family: 'Montserrat';
+    background-color: white;
+    color: #28292B;
+    border: 1px solid #28292B;
+    font-weight: 700;
+    transition: all 0.2s ease-in;
+    }
+ @media screen and (min-width: 1200px) {
+     .alm-load-more-btn {
+        margin-top:50px;
+        }
+    }
+    @media screen and (max-width: 100px) {
+     .past-fest-post img,
+    .past-series-post img {
+        transform: none!important;
+        width: 100% !important;
+        height: auto;
+        max-width: none;
+    }
+    }
+    
+    
+    .alm-load-more-btn:hover{
+        transform:translateY(-8px);
+    }
+    .alm-masonry,
+.alm-btn-wrap {
+  display: block;
+  overflow: hidden;
+  clear: both; }
+
+.alm-btn-wrap {
+  text-align: center;
+  padding: 10px 0 25px; }
+    
     /*   Festival Info Page   */
     #photosRight {
         width: 30%;
@@ -892,12 +933,16 @@ table {
         font-size: 90%;
     }
     /*          Past Festival Films Page        */
+.page-template-past-festival h3{
+    text-align: center;
+    
+}
     .page-template-past-festival .short-details {
         text-transform: none;
         letter-spacing: normal;
         max-height: 10px;
         line-height: 1;
-        font-size: 1vw;
+        font-size: 100%;
     }
     .movieName .movie-title {
         background-color: black;
@@ -921,6 +966,7 @@ table {
         background-repeat: no-repeat;
         background-position: 50% 0%;
     }
+    .page-template-past-festival .entry-title,
     .page-template-page-with-main-img .entry-title,
     .page-template-festival-page .entry-title,
     .page-template-series-page .entry-title {
@@ -1233,6 +1279,10 @@ table {
         background-color: black;
         position: relative;
     }
+    
+    .sub-menu li:hover {
+        background-color: black;
+    }
     /* Donate and Volunteer links*/
     #menu-item-177,
     #menu-item-178 {
@@ -1297,34 +1347,45 @@ table {
     }
     #nav:target .sub-menu li {
         margin: 0 auto;
-        text-align: left;
+        text-align: center;
         float: left;
         width: 100%;
         display: block;
         position: relative;
         z-index: 8878;
         background-color: none;
-        border-top: 1px solid white;
-    }
-    #nav:target .sub-menu li:last-child {
-        border-bottom: 1px solid white;
     }
     #nav:target .menu li {
-        width: 90%;
-        float: left;
+        width: 100%;
         padding: 0px;
     }
     #nav:target .menu li a,
     #nav:target .sub-menu li a {
         text-decoration: none;
         display: block;
-        text-align: left;
+        text-align: center;
         padding: 10px;
         padding-left: 10px;
         color: white;
         width: 100%;
         margin: 0 auto;
         letter-spacing: 5px;
+    }
+    #nav:target li:nth-child(1) {
+    -webkit-animation: slideInRight .3s 1 ease-out .1s both;
+    animation-name: slideInRight .3s 1 ease-out .1s both;
+    }
+    #nav:target li:nth-child(2) {
+    -webkit-animation: slideInRight .4s 1 ease-out .1s both;
+    animation-name: slideInRight .4s 1 ease-out .1s both;
+    }
+    #nav:target  li:nth-child(3) {
+    -webkit-animation: slideInRight .5s 1 ease-out .1s both;
+    animation-name: slideInRight .5s 1 ease-out .1s both;
+    }
+    #nav:target  li:nth-child(4) {
+    -webkit-animation: slideInRight .6s 1 ease-out .1s both;
+    animation-name: slideInRight .6s 1 ease-out .1s both;
     }
     #menu-main-navigation {
         padding-bottom: 20px;
@@ -1633,7 +1694,7 @@ table {
     .page-template-past-festival .short-details {
         text-transform: none;
         letter-spacing: normal;
-        font-size: 100%;
+            font-size: 150%;
     }
     .past-fest-year {
         padding-top: 30px;
@@ -1652,17 +1713,12 @@ table {
         clear: both;
         padding: 0;
         height: auto;
+        display: block;
     }
     .past-fest-post p {
         width: 100%;
     }
-    .past-fest-post img,
-    .past-series-post img {
-        transform: none!important;
-        width: 100% !important;
-        height: auto;
-        max-width: none;
-    }
+    
     /* Mobile Series Pages */
     .page-template-series-page .address b {
         font-size: 110%;
