--- a/style.css
+++ b/style.css
@@ -1084,6 +1084,31 @@ table {
     .single-post .short-details {
         padding-bottom: 20px;
     }
+    
+    /*  Schedule Page  */
+    .schedule-page{
+        width:80%;
+        padding:20px;
+        margin:0 auto;
+        border:2px solid black;
+    }
+    .schedule-page h2 {
+        padding:0px;
+        margin:0px;
+    }
+    .schedule-page .film-video-title {
+    font-size: 290%;
+    padding:0px;
+    }
+    .schedule-page>ul>li{
+        padding:10px;
+        border-bottom:1px solid grey;
+        width:99%;
+        margin:0 auto;
+    }
+    .schedule-page>ul>li:last-child{
+        border:none;
+    }
     /*   ANIMATIONS   */
     @-webkit-keyframes fadeInUpBig {
         from {
