--- a/style.css
+++ b/style.css
@@ -269,11 +269,15 @@ table {
         vertical-align: middle;
         -webkit-transform: perspective(1px) translateZ(0);
         transform: perspective(1px) translateZ(0);
+        -webkit-box-shadow: 0 0 1px transparent;
         box-shadow: 0 0 1px transparent;
         -webkit-transition-duration: 0.3s;
         transition-duration: 0.3s;
         -webkit-transition-property: transform;
+        -webkit-transition-property: -webkit-transform;
+        transition-property: -webkit-transform;
         transition-property: transform;
+        transition-property: transform, -webkit-transform;
         -webkit-transition-timing-function: ease-out;
         transition-timing-function: ease-out;
     }
@@ -330,6 +334,7 @@ table {
         height: auto;
         position: absolute;
         z-index: 8;
+        -webkit-transform: perspective(150px) translate3d(-35px, -35px, 0px);
         transform: perspective(150px) translate3d(-35px, -35px, 0px);
     }
     #menu-item-302 {
@@ -341,7 +346,6 @@ table {
     .menu {
         width: 100%;
         display: block;
-        margin-top: 30px;
         position: relative;
         text-align: right;
     }
@@ -351,7 +355,7 @@ table {
     }
     .menu li a {
         text-transform: uppercase;
-        color: black;
+        color: white;
         text-decoration: none;
     }
     .current_page_item a {
@@ -401,9 +405,13 @@ table {
     }
     /*      ----  Sidebar -----  */
     aside {
-        max-width: 980px;
         margin: 0 auto;
-        width: 90%;
+        width: 100%;
+        padding-top: 30px;
+        background-color:black;
+        position:relative;
+        -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.69);
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.69);
     }
     /*      ----  Footer -----  */
     #footer {
@@ -558,6 +566,7 @@ table {
         background-image: url(images/festival.jpg);
         z-index: 500;
         opacity: .8;
+        -webkit-transition: 0.15s ease-in;
         transition: 0.15s ease-in;
     }
     .splash #left-box-content,
@@ -565,6 +574,7 @@ table {
         padding: 20px;
         color: white;
         padding-top: 40vh;
+        -webkit-transform: scale(.9);
         transform: scale(.9);
     }
     .splash #left-box:hover,
@@ -579,6 +589,7 @@ table {
         opacity: 1;
     }
     .splash #right-box {
+        -webkit-transition: 0.15s ease-in;
         transition: 0.15s ease-in;
         opacity: .8;
         position: fixed;
@@ -596,9 +607,12 @@ table {
         background-color: black;
         padding: 5px;
         max-width: 80%;
+        -webkit-transform: translate(-50px);
         transform: translate(-50px);
+        -webkit-transition: .3s ease-in;
         transition: .3s ease-in;
         max-width: 70%;
+        -webkit-animation: slideIn 1.7s ease-in;
         animation: slideIn 1.7s ease-in;
         margin-left: 100px;
     }
@@ -642,6 +656,7 @@ table {
         padding-left: 20px;
         font-size: 100%;
         text-align: center;
+        -webkit-transform: rotate(-15deg);
         transform: rotate(-15deg);
         line-height: 1.7;
     }
@@ -692,11 +707,15 @@ table {
         vertical-align: middle;
         -webkit-transform: perspective(1px) translateZ(0);
         transform: perspective(1px) translateZ(0);
+        -webkit-box-shadow: 0 0 1px transparent;
         box-shadow: 0 0 1px transparent;
         -webkit-transition-duration: 0.3s;
         transition-duration: 0.3s;
         -webkit-transition-property: transform;
+        -webkit-transition-property: -webkit-transform;
+        transition-property: -webkit-transform;
         transition-property: transform;
+        transition-property: transform, -webkit-transform;
         -webkit-transition-timing-function: ease-out;
         transition-timing-function: ease-out;
     }
@@ -757,6 +776,7 @@ table {
     }
     .past-fest-post img,
     .past-series-post img {
+        -webkit-transform: none!important;
         transform: none!important;
         width: 100% !important;
         height: auto;
@@ -767,6 +787,7 @@ table {
         z-index: 6000;
         display: inline-block;
         width: 100%;
+        -webkit-transform: none;
         transform: none;
     }
     .past-fest-year {
@@ -829,6 +850,7 @@ table {
     color: #28292B;
     border: 1px solid #28292B;
     font-weight: 700;
+    -webkit-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
     }
  @media screen and (min-width: 1200px) {
@@ -839,6 +861,7 @@ table {
     @media screen and (max-width: 100px) {
      .past-fest-post img,
     .past-series-post img {
+        -webkit-transform: none!important;
         transform: none!important;
         width: 100% !important;
         height: auto;
@@ -848,6 +871,7 @@ table {
     
     
     .alm-load-more-btn:hover{
+        -webkit-transform:translateY(-8px);
         transform:translateY(-8px);
     }
     .alm-masonry,
@@ -977,6 +1001,7 @@ table {
         background-color: black;
         color: white !important;
         padding: 2px 3px;
+        -webkit-transform: translateY(30px);
         transform: translateY(30px);
     display: inline-block;
     }
@@ -1032,6 +1057,7 @@ table {
     .page-template-festival-page .entry-title,
     .page-template-series-page .entry-title {
         display: block;
+        -webkit-transform: translateY(-180px);
         transform: translateY(-180px);
         position: absolute;
         padding: 10px;
@@ -1092,6 +1118,7 @@ table {
     }
     .post .single-film-title {
         display: block;
+        -webkit-transform: translateY(-70px);
         transform: translateY(-70px);
         position: absolute;
         padding: 10px;
@@ -1219,8 +1246,22 @@ table {
         -webkit-animation-name: fadeInUpBig;
         animation-name: fadeInUpBig;
     }
+    @-webkit-keyframes slideIn {
+        0% {
+            -webkit-transform: translateX(-400px);
+            transform: translateX(-400px);
+            opacity: 0;
+        }
+        60% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
     @keyframes slideIn {
         0% {
+            -webkit-transform: translateX(-400px);
             transform: translateX(-400px);
             opacity: 0;
         }
@@ -1429,6 +1470,7 @@ table {
         right: 0;
         height: 100%;
         width: 75%;
+        -webkit-animation: slideInRight 0.3s ease-in;
         animation: slideInRight 0.3s ease-in;
     }
     #nav:target .menu {
@@ -1438,12 +1480,12 @@ table {
     #nav:target ul {
         background-color: black;
         display: block;
-        position: fixed;
         margin-top: 0;
         padding-top: 0;
         top: 0px;
         right: 0;
         width: 100%;
+        height: 100%;
         position: relative;
         overflow: hidden;
         color: white;
@@ -1473,27 +1515,34 @@ table {
         text-decoration: none;
         display: block;
         text-align: center;
-        padding: 10px;
-        padding-left: 10px;
+        padding: 5px;
         color: white;
         width: 100%;
         margin: 0 auto;
-        letter-spacing: 5px;
+        letter-spacing: 2px;
+        font-size: 100%;
+    }
+    #nav:target .menu-main-navigation-container{
+        height:100%;
     }
     #nav:target li:nth-child(1) {
     -webkit-animation: slideInRight .3s 1 ease-out .1s both;
+    -webkit-animation-name: slideInRight .3s 1 ease-out .1s both;
     animation-name: slideInRight .3s 1 ease-out .1s both;
     }
     #nav:target li:nth-child(2) {
     -webkit-animation: slideInRight .4s 1 ease-out .1s both;
+    -webkit-animation-name: slideInRight .4s 1 ease-out .1s both;
     animation-name: slideInRight .4s 1 ease-out .1s both;
     }
     #nav:target  li:nth-child(3) {
     -webkit-animation: slideInRight .5s 1 ease-out .1s both;
+    -webkit-animation-name: slideInRight .5s 1 ease-out .1s both;
     animation-name: slideInRight .5s 1 ease-out .1s both;
     }
     #nav:target  li:nth-child(4) {
     -webkit-animation: slideInRight .6s 1 ease-out .1s both;
+    -webkit-animation-name: slideInRight .6s 1 ease-out .1s both;
     animation-name: slideInRight .6s 1 ease-out .1s both;
     }
     #menu-main-navigation {
@@ -1527,6 +1576,7 @@ table {
         padding: 50px;
         background-color: yellow;
         display: block;
+        position: -webkit-sticky;
         position: sticky;
     }
     .splash #footer .fa {
@@ -1582,6 +1632,7 @@ table {
         background-size: cover;
         z-index: 500;
         opacity: 1;
+        -webkit-transition: 0.15s ease-in;
         transition: 0.15s ease-in;
         border: none;
         border-top: 5px solid white;
@@ -1591,6 +1642,7 @@ table {
     }
     .splash #right-box {
         padding-top: 5vh;
+        -webkit-transition: 0.15s ease-in;
         transition: 0.15s ease-in;
         opacity: 1;
         position: relative;
@@ -1609,7 +1661,9 @@ table {
         color: white;
         padding-top: 0;
         text-align: center;
+        -webkit-transform: none;
         transform: none;
+        -webkit-transition: ease-in .2s;
         transition: ease-in .2s;
     }
     .splash #left-box:hover,
@@ -1620,11 +1674,13 @@ table {
     }
     .splash #left-box:hover #left-box-content .fa,
     .splash #right-box:hover #right-box-content .fa {
+        -webkit-transform: scale(.7);
         transform: scale(.7);
     }
     .splash #left-box:hover .read-more,
     .splash #right-box:hover .read-more {
         color: white!important;
+        -webkit-transform: scale(1.5);
         transform: scale(1.5);
     }
     .splash #left-box p,
@@ -1634,9 +1690,12 @@ table {
         padding: 5px;
         margin: 0;
         max-width: 80%;
+        -webkit-transform: none;
         transform: none;
+        -webkit-transition: none;
         transition: none;
         max-width: 100%;
+        -webkit-animation: none;
         animation: none;
     }
     .splash #right-box .fa,
@@ -1644,6 +1703,7 @@ table {
         display: block;
         padding: 10px 0 30px 0;
         font-size: 450%;
+        -webkit-transition: ease-in 0.3s;
         transition: ease-in 0.3s;
     }
     .read-more {
@@ -1660,6 +1720,7 @@ table {
         display: block;
         opacity: 1;
         text-shadow: none;
+        -webkit-transition: ease-in 0.3s;
         transition: ease-in 0.3s;
     }
     .read-more:hover {
@@ -1675,17 +1736,21 @@ table {
         text-align: center;
         z-index: 8888;
         line-height: 2;
+        -webkit-box-shadow: 3px 3px 3px black;
         box-shadow: 3px 3px 3px black;
         left: 10px;
         bottom: 20px;
         background-color: #E6AF2E;
+        -webkit-transition: ease-in .3s;
         transition: ease-in .3s;
     }
     #submit:hover {
+        -webkit-transform: translateY(-23px);
         transform: translateY(-23px);
     }
     #submit p {
         font-size: 12px;
+        -webkit-transform: none;
         transform: none;
         color: white;
         font-family: 'Raleway', sans-serif;
@@ -1726,10 +1791,20 @@ table {
         margin-top: 0px;
         margin-left: 0px;
     }
+    .huge-img{
+        display:none;
+    }
+    .page-template-past-festival .entry-title, .page-template-page-with-main-img .entry-title, .page-template-festival-page .entry-title, .page-template-series-page .entry-title{
+        position:relative;
+        -webkit-transform:translateY(0px);
+        transform:translateY(0px);
+    }
     aside {
         clear: both;
         width: 100%;
-        overflow: hidden:
+        background-color: white;
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
     #footer {
         margin-top: 100px;
@@ -1764,10 +1839,34 @@ table {
     }
     /* Mobile About AITO Page */
     #right-col30 {
-        float: left;
-        margin-right: 10px;
-        width: 10%;
+        float: none;
+        clear:both;
+        margin:0px;
+        width: 100%;
         text-align: left;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -ms-flex-flow: row;
+        flex-flow: row;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+    #right-col30 a{
+        padding:0px;
+        margin:0px;
+        padding-right: 20px;
+        vertical-align: top;
+    }
+    #right-col30 .fa{
+        font-size:40px;
     }
     #right-col30 img {
         display: none;
@@ -1776,8 +1875,9 @@ table {
         display: none;
     }
     #left-col70 {
-        float: right;
-        width: 78%;
+        float: none;
+        clear:both;
+        width: 100%;
     }
     /* Mobile Series page */
     .page-template-series-page .entry-left-col {
@@ -1871,6 +1971,7 @@ table {
     }
     /* Mobile Animations */
     .fadeInUpBig {
+        -webkit-animation: none;
         animation: none;
     }
 }
