--- a/style.css
+++ b/style.css
@@ -1408,7 +1408,7 @@ table {
     }
     #show-button {
         display: block;
-        color: white;
+        color: black;
         text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.63);
         display: inline-block;
         font-size: 250%;
@@ -1515,12 +1515,13 @@ table {
         text-decoration: none;
         display: block;
         text-align: center;
-        padding: 5px;
+        padding: 10px 5px;
         color: white;
         width: 100%;
         margin: 0 auto;
         letter-spacing: 2px;
         font-size: 100%;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.74);
     }
     #nav:target .menu-main-navigation-container{
         height:100%;
